# Constantine-projects

./: .gitignore  .gitmodules  .markdownlint.json  README.md  backUpFood.html  git_extract_replace.bat  index.html  run_codex.cmd  simple-food-list.html
Owl/: Drv_Release.csv  (+18 more)
Tigger/美泰小转台/src/domain/jsonRpcClientDemoSRC/: Ag06DoCustomProtocol.cpp  Ag06TrimDialog.h  CMakeLists.txt  MT激活项目上位机_AG06通信协议V1.0.docx
XT422/AIPE/: AP9900上位机打包过程V1.2.docx  CMakeLists.txt  file_list.txt
XT422/AIPE/Aprog/: AG06Client.rc  Aprog.vcxproj  main.cpp  rccBuild.bat  uid_state.txt  version.xml
XT422/AIPE/Aprog/BackupFiles/: Localcfg.ini
XT422/AIPE/Aprog/Depend/QtPropertyBrowser/: QtSolutions_PropertyBrowser-headd.lib
XT422/AIPE/Aprog/Depend/pugixml/: ChipData_N25Qxx.xml
XT422/AIPE/Aprog/Depend/qHexedit/: achexviewedit.h
XT422/AIPE/Aprog/Depend/scripts/: compare_files.py  modifyVersion.py
XT422/AIPE/Aprog/Drv/: Drv-XSA300.drv  Drv-XT-RS422.drv  Drv-eMMC.drv
XT422/AIPE/Aprog/LocalDB/: DB18U333.db
XT422/AIPE/Aprog/Mst/: Mst-XT-RS422.drv  Mst-eMMC.drv
XT422/AIPE/Aprog/Translations/: agclient_en.ts  agclient_ja.qm  agclient_zh.qm  agclient_zh.ts
XT422/AIPE/Aprog/data/: ReportTemplet.html
XT422/AIPE/Controller/ACCmdHandler/: 422com.json  ACCmdHandler.cpp  ACCmdPacket.h  ACNetComm.h  ACTypes.h  AngKRemoteCmdManager.cpp  AngKRemoteCmdManager.h  AppConfigModel.cpp  AppConfigModel.h  AppModels.cpp  AppModels.h  BufferModel.h  CmdHandler.cpp  DDRPerformanceMonitor.h  DDRStressTest.cpp  DataFlowMonitor.cpp  ICD.cpp  ICmdHandler.h  IDataWriter.h  MT422DllHandler.h  MT422SerialHandlerUsageExample.cpp  SerialPortWorker.cpp  UplinkDataReceiver.cpp  UplinkDataReceiver.h  build_ddr_tests.bat
XT422/AIPE/Controller/AutomaticManager/: ACAutomaticManager.cpp
XT422/AIPE/Controller/ChkManager/: AngKChkManager.cpp
XT422/AIPE/Controller/DeviceManager/: ACDeviceManager.h
XT422/AIPE/Controller/EventManager/: ACEventLogger.cpp  ACEventLogger.h  ACEventManager.h
XT422/AIPE/Controller/IOHeapManager/: AngKIOHeapManager.cpp  AngKIOHeapManager.h
XT422/AIPE/Controller/LogManager/: AngKLogManager.h  IOutput.h
XT422/AIPE/Controller/MessageQueuePool/: safe_queue_base.h  thread_pool.h
XT422/AIPE/Controller/ProjectManager/: ACProjManager.cpp  ACProjManager.h  ProjectManagerSingleton.h
XT422/AIPE/Controller/RemoteServer/: JsonRpcServer.cpp
XT422/AIPE/Controller/ReportManager/: ACHtmlLogWriter.h  ACReportRecord.cpp
XT422/AIPE/Controller/ScanManager/: AngKScanManager.cpp  AngKScanManager.h
XT422/AIPE/Controller/TaskManager/: ACSSDProjManager.cpp  ACSSDProjManager.h  ACTaskManager.h  TaskManagerSingleton.cpp
XT422/AIPE/Controller/TransmitSignalsInstance/: AngKTransmitSignals.cpp  AngKTransmitSignals.h
XT422/AIPE/Controller/Utils/: AngKCommonTools.cpp  AngkLogger.cpp  AngkLogger.h  ChkSum.h
XT422/AIPE/Controller/eMMC/: ACMasterChipAnalyzeManager.cpp  ACMasterChipAnalyzeManager.h  ACeMMCAnalyzeManager.cpp  ACeMMCAnalyzeManager.h
XT422/AIPE/Model/DataBase/: AngKDBStandardItemModel.cpp  AngKDBStandardItemModel.h  ChipModel.h  ISQList.cpp  SQLStatement.hpp
XT422/AIPE/Model/DataBuffer/: AngKDataBuffer.h  IDataBuffer.h
XT422/AIPE/Model/DataTransform/: DataTransform.cpp  DataTransform.h
XT422/AIPE/Model/Device/: AngKDeviceModel.cpp
XT422/AIPE/Model/ProjDataset/: AngKProjDataset.cpp  AngKProjDataset.h
XT422/AIPE/View/DlgComponents/: AngKDialog.h
XT422/AIPE/View/GlobalInit/: AppModeType.cpp  ChipOperatorCfgDefine.h  DevErrCode.cpp  DevErrCode.h  PropertyDefine.h  Tag_Proj.h  XmlDefine.h  errorcode.h
XT422/AIPE/View/mainFrame/: AngKGlobalInstance.cpp
projects/美泰小转台/: CMakeLists.txt  TesterFramework.pro  TesterFramework.sln  TesterFramework.vcxproj
projects/美泰小转台/config/: device.json  device_config_with_handler.json  setting.ini  site.json  site_workflow_router.json
projects/美泰小转台/config/recipes/: turntable_test_safe2.json
projects/美泰小转台/docs/: JSON-RPC二次开发接口文档.md  KWAT_API仕様Ver2.1.xlsx  PostProcessStep归档功能说明.md  Qt对象生命周期与信号槽崩溃问题分析.md  XT小转台软件通信协议设计与命令说明V1.6 20250616.docx  快速开始指南.md  第三方库集成指南.md  美泰转台通信协议(Ver1.0).xlsx  美泰转台通信协议(Ver1.1).xlsx
projects/美泰小转台/docs/avadakedavra/: PostProcess与RunProcess简要说明.md  README.md
projects/美泰小转台/include/: Ag06DoCustomProtocol.h  GlobalItem.h
projects/美泰小转台/include/application/: ConditionalStep.h  DelayStep.h  RunProcessStep.h  SwitchStep.h  WaitForSignalStep.h  WorkflowContext.h  WorkflowUtils.h
projects/美泰小转台/include/domain/: AsyncProcessDevice.h  BurnDevice.h  IProtocolFramer.h  JsonRpcClient.h
projects/美泰小转台/include/infrastructure/: ICommunicationChannel.h  SerialChannel.h
projects/美泰小转台/include/services/: DeviceManager.h  DutManager.h  SiteWorkflowRouter.h
projects/美泰小转台/include/ui/: LogConfigDialog.h  RecipeStartDialog.h  SimpleLogWidget.h  TestBoardControlWidget.h
projects/美泰小转台/include/uid/: mtuidgenerator.h
projects/美泰小转台/include/utils/: ByteUtils.h  CRC16.h
projects/美泰小转台/sql/: ChipTestDatabase.cpp  ChipTestDatabase.h  chip_test_database_design.md
projects/美泰小转台/src/: Ag06DoCustomProtocol.cpp  GlobalItem.cpp
projects/美泰小转台/src/application/: DelayStep.cpp  DeviceCommandStep.cpp  PostProcessStep.cpp  RunProcessStep.cpp  SwitchStep.cpp  WaitForSignalStep.cpp
projects/美泰小转台/src/core/: CoreEngine.cpp
projects/美泰小转台/src/domain/: ProcessDevice.cpp
projects/美泰小转台/src/infrastructure/: SerialChannel.cpp  TcpChannel.cpp  TcpServerChannel.cpp
projects/美泰小转台/src/services/: WorkflowManager.cpp
projects/美泰小转台/src/ui/: Ag06TrimDialog.cpp  DutMonitorWidget.cpp  LogConfigDialog.cpp  RecipeStartDialog.cpp  SimpleLogWidget.cpp  TestBoardControlWidget.cpp  TestBoardControlWidget.ui
projects/美泰小转台/src/utils/: CRC16.cpp
projects/美泰小转台/vauto/: go.mod  main.go
projects/美泰小转台/vauto/backup/: 3d-02-Storage-up14.json  3d-02-Storage-up15.json  3d-02-Storage-up16.json  3d-02-Storage-up5.json  3d1.json
projects/美泰小转台/vauto/doc/: temp.md
projects/美泰小转台/vauto/server/: auto_byte_server.go  auto_cmd_server.go  auto_json_server.go  server.go  syslog_control.go  turn_control.go  water_control.go
projects/美泰小转台/vauto/util/: crc.go
(+2380 files in other folders)
